# mp3_to_ogg_py

./: .gitignore  README.md  README_CN.md  exporters.py  install.bat  install_dependencies.bat  mp3_to_ogg.py  pyproject.toml  requirements.txt  setup.py  uninstall.bat
